# AeroShape

./: .gitignore  README.md  app.py  basic_wing.step  pyproject.toml  requirements.txt  tmp_debug.py  tmp_debug10.py  tmp_debug11.py  tmp_debug12.py  tmp_debug13.py  tmp_debug14.py  tmp_debug15.py  tmp_debug16.py  tmp_debug17.py  tmp_debug2.py  tmp_debug3.py  tmp_debug4.py  tmp_debug5.py  tmp_debug6.py  tmp_debug7.py  tmp_debug8.py  tmp_debug9.py
Aeroshape/: LICENSE
Aeroshape/examples/: visualize_wing.py
Exports/: basic_wing.step  blended_wing_body.stl
PyGum_Package/: app.py  pyproject.toml  requirements.txt  setup.py
PyGum_Package/aeroshape/: __init__.py  exporter.py  geometry.py  volume.py
PyGum_Package/examples/: basic_wing.py  export_stl.py  run_gui.py  thin_shell_wing.py
aeroshape/: __init__.py  nurbs_ops.py  profiles.py  wing_model.py
aeroshape/analysis/: __init__.py  clustering.py  mesh.py  volume.py
aeroshape/cad/: __init__.py  surfaces.py  utils.py
aeroshape/core/: __init__.py  mass.py  volume.py
aeroshape/geometry/: __init__.py  aircraft.py  airfoils.py  cross_sections.py  curves.py  fuselage.py  wings.py
aeroshape/nurbs/: __init__.py  export.py  mesh_export.py  surfaces.py  utils.py
aeroshape/vis/: __init__.py  rendering.py
aeroshape/visualization/: __init__.py  rendering.py
examples/: aircraft_box_wing.py  aircraft_bwb_guided.py  aircraft_commercial_airliner.py  aircraft_experimental_glider.py  aircraft_military_cargo.py  aircraft_twin_boom.py  aircraft_uav_bwb.py  analytical_validation.py  basic_wing.py  blended_wing_body.py  blended_wing_body_guided.py  box_wing.py  clustering_laws.py  compute_properties.py  custom_airfoil.py  export_demo.py  export_mesh_demo.py  export_stl.py  multi_segment_wing.py  run_all.py  strut_braced_wing.py  test_bwb_interp.py  test_geomconvert.py  test_interp.py  test_pts_params.py  thin_shell_wing.py  verify_upgrade.py  visualize_wing.py
tests/: __init__.py  test_airfoils.py  test_analysis.py  test_export.py  test_wings.py
