[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeroshape"
version = "4.1.0"
description = "High-performance NURBS-based geometry engine for aircraft design and analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Victor Alulema"},
    {name = "Esteban Valencia"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7.0",
    "build123d>=0.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
viz = [
    "matplotlib>=3.5.0",
]
mesh = [
    "pyCGNS>=6.0",
]
all = [
    "aeroshape[viz,mesh,test]",
]

[project.urls]
Repository = "https://github.com/victor-alulema/aeroshape"

[tool.setuptools.packages.find]
include = ["aeroshape*"]
